@@ -5,12 +5,14 @@ noinst_LTLIBRARIES = libplanargraph.la
 INCLUDES = -I$(top_srcdir)/source/headers 
 
 libplanargraph_la_SOURCES = \
-	../planargraph/planarDirectedEdge.cpp \
-	../planargraph/planarDirectedEdgeStar.cpp \
-	../planargraph/planarEdge.cpp \
-	../planargraph/planarGraphComponent.cpp \
-	../planargraph/planarNode.cpp \
-	../planargraph/planarNodeMap.cpp \
-	../planargraph/planarPlanarGraph.cpp 
+	planarDirectedEdge.cpp \
+	planarDirectedEdgeStar.cpp \
+	planarEdge.cpp \
+	planarGraphComponent.cpp \
+	planarNode.cpp \
+	planarNodeMap.cpp \
+	planarPlanarGraph.cpp \
+	planarSubgraph.cpp \
+	algorithm/ConnectedSubgraphFinder.cpp
 
 libplanargraph_la_LIBADD = 
